@@ -8,7 +8,7 @@ Text::Parser - Bare text parser, bundles other common "mundane" tasks.
 
 =head1 VERSION
 
-version 0.752
+version 0.753
 
 =head1 SYNOPSIS
 
@@ -141,7 +141,7 @@ Derived classes can decide to store records in a different form. A derived class
 
 Takes no arguments. Returns C<1>. You will probably never call this method in your main program.
 
-This method is usually used only in the derived class. See L<this example|/"Example 3 : Aborting without errors"> for an example.
+This method is usually used only in the derived class. See L<this example|/"Example 3 : Aborting without errors">.
 
 =head2 get_records
 
